--- a/nightscout/config.json
+++ b/nightscout/config.json
@@ -29,7 +29,7 @@
     "ssl": true,
     "certfile": "fullchain.pem",
     "keyfile": "privkey.pem",
-    "api_key": "",
+    "api_key": "Danielatimponi.00",
     "mongodb_uri": "mongodb://127.0.0.1:27017/admin",
     "auth_default_roles": "readable",
     "theme": "colors",
